use chrono::{DateTime, Utc};

use crate::domain::{
    Advisor, AdvisorEvent, Candlestick, DomainError,
    analysis::{BullReversal, BullTrendForm, Evaluate},
    supervisor::structure::Structure,
};

pub trait SignalRepository {}

/// Represent a trading signal generated by an analyzer.
/// # Fields
/// - id: Unique identifier for the signal.
/// - timestamp: The time when the signal was generated.
/// - reason: The reason or condition that triggered the signal.
#[derive(Debug, Clone)]
pub struct Signal {
    timestamp: DateTime<Utc>,
    reason: String,
}

impl Signal {
    pub fn new(timestamp: DateTime<Utc>, reason: String) -> Self {
        Self { timestamp, reason }
    }
}

pub struct SignalAdvisor {
    activated_on: Vec<Structure>,
    looking_for: Vec<Box<dyn Evaluate>>,
    at: Vec<Box<dyn Evaluate>>,
}

impl Default for SignalAdvisor {
    fn default() -> Self {
        Self {
            activated_on: Vec::new(),
            looking_for: vec![BullReversal],
            at: Vec::new(),
        }
    }
}

impl Advisor for SignalAdvisor {
    fn evaluates(&self, candles: &[Candlestick]) -> Result<Vec<AdvisorEvent>, DomainError> {
        let mut signals = Vec::new();
        for pattern in &self.looking_for {
            pattern.evaluates(candles);
        }
        Ok(signals)
    }
}
