@startuml

package "Domain" {
  package "Supervis0r" {
    class Supervisor
    class StructureAdvisor
    class SignalAdvisor
    class Structure
    class Signal
  }
  package "Analysis" {
    abstract class Formation
    abstract class Pattern
    abstract class EntryPoint
  }
  package "Market" {
    interface DataFeed
    class Candlestick
  }

  Supervisor "1" --> "1" StructureAdvisor : contains
  Supervisor "1" --> "*" SignalAdvisor : contains
  Supervisor ..> DataFeed : uses
  StructureAdvisor "1" --> "*" Formation : looking_for
  StructureAdvisor ..> Structure : produces
  SignalAdvisor "1" --> "*" Structure : activated_on
  SignalAdvisor "1" --> "*" Pattern : looking_for
  SignalAdvisor "1" --> "*" EntryPoint : at_entry
  SignalAdvisor ..> Signal : produces
}

@enduml
